--- a/css/styles.css
+++ b/css/styles.css
@@ -3,21 +3,20 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Brandon Text,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
-
 }
 
 section{
     width: 100vw;
     height: 100vh;
-    background-color: #333;
+    background: rgb(45,176,255);
+    background: linear-gradient(158deg, rgba(45,176,255,1) 0%, rgba(6,103,149,1) 100%);
 }
 
 .formulario{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    padding-top: 50%;
-    transform: translateY(-25%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 form h1{
@@ -34,7 +33,7 @@ form{
     width: 500px;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0px 0px 40px #000;
+    box-shadow: 0px 0px 40px rgba(45,176,255,1);
 }
 
 form input, form label {
@@ -52,7 +51,7 @@ form input{
 }
 
 form input[type="submit"]{
-    background-color: #4CAF50;
+    background-color: rgba(45,176,255,1);
     color: #fff;
     font-weight: 600;
     font-size: 25px;
